--- a/templates/pages/post.html.twig
+++ b/templates/pages/post.html.twig
@@ -1,7 +1,4 @@
-{% extends 'base.html.twig' %}
-
-{% block body %}
-    <h1 style="text-align: center;margin-top: 120px;columns: #b1b0b0;"> Dernièr post</h1>
+<div class=" col-md-4">
     <div class="all-posts">
         <h3 style="text-align: center">Titre du post</h3>
         <h6>Auteur : <a href="#">Alessandro Rinaudo</a></h6>
@@ -13,15 +10,4 @@
             Laboris nisi uts dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
         </p>
     </div>
-    <h1 style="text-align: center;margin-top: 30px"> Tous les posts</h1>
-    <div class="row">
-        {{ include ('pages/post.html.twig') }}
-        {{ include ('pages/post.html.twig') }}
-        {{ include ('pages/post.html.twig') }}
-        {{ include ('pages/post.html.twig') }}
-        {{ include ('pages/post.html.twig') }}
-        {{ include ('pages/post.html.twig') }}
-
-
-    </div>
-{% endblock %}
+</div>
