--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <!-- boostrap  4.5.0 -->
 
-    <link rel = "icon" href ="{{ asset('images/logo2.png') }}" type = "image/x-icon">
+    <link rel = "icon" href ="{{ asset('images/logo.png') }}" type = "image/x-icon">
     <link rel="stylesheet" href="{{ asset('css/style.css') }}">
 </head>
 <body style=" background :#bac0c5" >
