--- a/templates/pages/post.html.twig
+++ b/templates/pages/post.html.twig
@@ -1,8 +1,8 @@
 <div class=" col-md-4">
     <div class="all-posts">
         <h3 style="text-align: center">Titre du post</h3>
-        <h6>Auteur : <a href="#">Alessandro Rinaudo</a></h6>
-        <h6>Catégorie : <a href="#">Création interphace graphique</a></h6>
+        <h6>Auteur : <a class="liens-cliquables" href="#">Alessandro Rinaudo</a></h6>
+        <h6>Catégorie : <a class="liens-cliquables" href="#">Création interphace graphique</a></h6>
         <p style="overflow: hidden;white-space: nowrap;text-overflow: ellipsis;">
             Laboris nisi ut aliquip ex ea commodo consequat. Quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
             Laboris nisi ut aliquip ex ea commodo consequat. Quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
