--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <title>Secret Forum</title>
+    <title>Confidential</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- boostrap  4.5.0 -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -11,10 +11,14 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <!-- boostrap  4.5.0 -->
 
+    <!--    font        -->
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@500&display=swap" rel="stylesheet">
+    <!--    font        -->
+
     <link rel = "icon" href ="{{ asset('images/logo.png') }}" type = "image/x-icon">
     <link rel="stylesheet" href="{{ asset('css/style.css') }}">
 </head>
-<body style=" background :#bac0c5" >
+<body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top ">
     <a style="font-size: 15px;"class="navbar-brand" href="#"><img style ="width: 40%;" src="{{ asset('images/logo.png') }}" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +61,7 @@
     <!-- Footer Elements -->
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3" style="background-color: #343a40; color: #fff; height: 92px !important;padding: 50px auto !important;">
+    <div class="footer-copyright text-center py-3" style="background-color: #10161b ; color: #fff; height: 92px !important;padding: 50px auto !important;">
         <p>© 2020 Copyright Confidential:</p>
         <a href="https://alessandrorinaudo.it/" target="_blank"> alessandrorinaudo.it</a>
     </div>
