--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -63,7 +63,7 @@
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3" style="background-color: #10161b ; color: #fff; height: 92px !important;padding: 50px auto !important;">
         <p>© 2020 Copyright Confidential:</p>
-        <a href="https://alessandrorinaudo.it/" target="_blank"> alessandrorinaudo.it</a>
+        <a href="https://alessandrorinaudo.com/" target="_blank"> alessandrorinaudo.com</a>
     </div>
     <!-- Copyright -->
 
